# msgme

./: .clangd  .env  .gitignore  CMakeLists.txt  main.cpp  main.py  makefile  msgme.cpp  msgmecreds.cpp  readme.md  requirements.txt
src/: bot.cpp  bot.h  commands.cpp  commands.h  config.cpp  easyargs.h  functions.cpp  functions.h  interactive.cpp  send.cpp  setuser.cpp
